Added firebase support

--- a/Questions/Base.lproj/Main.storyboard
+++ b/Questions/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xPQ-WW-jeP">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vlL-a3-EWp">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -7,19 +7,20 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Sessions-->
+        <!--Rooms-->
         <scene sceneID="9NZ-MC-mH2">
             <objects>
-                <tableViewController id="hVJ-9d-uKL" customClass="SessionsController" customModule="Questions" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="hVJ-9d-uKL" customClass="RoomsController" customModule="Questions" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="69" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="OH3-36-BFE">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Cell" id="t7F-5U-5l1" customClass="SessionsCell" customModule="Questions" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Cell" id="t7F-5U-5l1" customClass="RoomsCell" customModule="Questions" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="69"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="t7F-5U-5l1" id="RiY-0X-h6J">
@@ -71,21 +72,25 @@
                             <outlet property="delegate" destination="hVJ-9d-uKL" id="3Ps-sj-pgP"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Sessions" id="v6G-ak-VVF">
+                    <navigationItem key="navigationItem" title="Rooms" id="v6G-ak-VVF">
                         <barButtonItem key="leftBarButtonItem" systemItem="search" id="V75-Hr-bvN"/>
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="ScN-DD-qCZ"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="ScN-DD-qCZ">
+                            <connections>
+                                <action selector="addRoomAction:" destination="hVJ-9d-uKL" id="hzt-6C-Twb"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xq4-aT-a6P" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="540" y="121.88905547226388"/>
+            <point key="canvasLocation" x="540" y="102"/>
         </scene>
         <!--Questions-->
         <scene sceneID="oaL-FL-92Z">
             <objects>
                 <tableViewController title="Questions" id="WKa-6W-f5R" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="WF6-dS-68F">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
@@ -106,7 +111,52 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="z0m-sC-RrE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1351.2" y="121.88905547226388"/>
+            <point key="canvasLocation" x="1351" y="102"/>
+        </scene>
+        <!--Root Controller-->
+        <scene sceneID="NwI-NW-Baa">
+            <objects>
+                <viewController id="vlL-a3-EWp" customClass="RootController" customModule="Questions" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="CL7-u5-Kus">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hMq-Ow-lVR">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
+                                <connections>
+                                    <segue destination="xPQ-WW-jeP" kind="embed" id="AM1-5c-6Js"/>
+                                </connections>
+                            </containerView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KXH-eH-5UN">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="Pjb-fo-FWY"/>
+                                </constraints>
+                                <state key="normal" title="Join Room">
+                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="hMq-Ow-lVR" firstAttribute="leading" secondItem="kzZ-Eh-IgW" secondAttribute="leading" id="EsY-y6-FtV"/>
+                            <constraint firstItem="KXH-eH-5UN" firstAttribute="leading" secondItem="kzZ-Eh-IgW" secondAttribute="leading" id="H9o-cp-Is5"/>
+                            <constraint firstItem="hMq-Ow-lVR" firstAttribute="trailing" secondItem="kzZ-Eh-IgW" secondAttribute="trailing" id="Lgv-dz-ezo"/>
+                            <constraint firstItem="KXH-eH-5UN" firstAttribute="trailing" secondItem="kzZ-Eh-IgW" secondAttribute="trailing" id="Sn4-rZ-JK0"/>
+                            <constraint firstItem="KXH-eH-5UN" firstAttribute="top" secondItem="hMq-Ow-lVR" secondAttribute="bottom" id="TbH-WV-4F1"/>
+                            <constraint firstItem="KXH-eH-5UN" firstAttribute="bottom" secondItem="kzZ-Eh-IgW" secondAttribute="bottom" id="g8P-hp-E4k"/>
+                            <constraint firstItem="hMq-Ow-lVR" firstAttribute="top" secondItem="CL7-u5-Kus" secondAttribute="top" id="rvd-yh-LPC"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="kzZ-Eh-IgW"/>
+                    </view>
+                    <connections>
+                        <outlet property="bottomButton" destination="KXH-eH-5UN" id="iup-TP-1AO"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uxb-KV-Pyu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1170.4000000000001" y="121.88905547226388"/>
         </scene>
         <!--Sessions-->
         <scene sceneID="eNI-gO-ATa">
@@ -123,7 +173,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BIo-uI-63k" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-324" y="121.88905547226388"/>
+            <point key="canvasLocation" x="-324" y="102"/>
         </scene>
     </scenes>
 </document>
