--- a/Questions/Base.lproj/Main.storyboard
+++ b/Questions/Base.lproj/Main.storyboard
@@ -15,7 +15,7 @@
             <objects>
                 <tableViewController id="hVJ-9d-uKL" customClass="RoomsController" customModule="Questions" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="85" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="OH3-36-BFE">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="551"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
@@ -88,7 +88,7 @@
             <objects>
                 <tableViewController title="Questions" id="WKa-6W-f5R" customClass="QuestionsController" customModule="Questions" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="85" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="WF6-dS-68F">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="551"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
@@ -155,8 +155,8 @@
         <scene sceneID="NNQ-qK-oX3">
             <objects>
                 <tableViewController id="LU6-L3-1tH" customClass="AnswersController" customModule="Questions" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="iXN-q0-7G8">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="551"/>
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="static" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="iXN-q0-7G8">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <sections>
@@ -213,18 +213,18 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EUA-5s-l7m">
-                                                    <rect key="frame" x="16" y="11" width="61.5" height="22"/>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="SrB-sa-top">
+                                                    <rect key="frame" x="16" y="11" width="343" height="22"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                </textView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="EUA-5s-l7m" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="vhv-J2-kTV" secondAttribute="trailingMargin" id="DkU-tI-UFG"/>
-                                                <constraint firstItem="EUA-5s-l7m" firstAttribute="leading" secondItem="vhv-J2-kTV" secondAttribute="leadingMargin" id="Z07-Kn-4fy"/>
-                                                <constraint firstItem="EUA-5s-l7m" firstAttribute="bottom" secondItem="vhv-J2-kTV" secondAttribute="bottomMargin" id="p4Q-LX-4Ao"/>
-                                                <constraint firstItem="EUA-5s-l7m" firstAttribute="top" secondItem="vhv-J2-kTV" secondAttribute="topMargin" id="q5i-g4-ECL"/>
+                                                <constraint firstItem="SrB-sa-top" firstAttribute="leading" secondItem="vhv-J2-kTV" secondAttribute="leadingMargin" id="5RU-Ic-696"/>
+                                                <constraint firstItem="SrB-sa-top" firstAttribute="bottom" secondItem="vhv-J2-kTV" secondAttribute="bottomMargin" id="D9s-Ph-zqs"/>
+                                                <constraint firstItem="SrB-sa-top" firstAttribute="trailing" secondItem="vhv-J2-kTV" secondAttribute="trailingMargin" id="PSW-Ht-ohV"/>
+                                                <constraint firstItem="SrB-sa-top" firstAttribute="top" secondItem="vhv-J2-kTV" secondAttribute="topMargin" id="eG3-NX-sNd"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -238,20 +238,21 @@
                     </tableView>
                     <connections>
                         <outlet property="adminLabel" destination="7EF-7O-Yfs" id="Bpl-bx-cSH"/>
-                        <outlet property="answerLabel" destination="EUA-5s-l7m" id="sbO-fa-ge1"/>
+                        <outlet property="answerView" destination="SrB-sa-top" id="1zN-6W-fPr"/>
                         <outlet property="titleLabel" destination="ckh-us-3nh" id="Gbj-sj-H2z"/>
+                        <segue destination="4HP-H7-Flq" kind="unwind" identifier="unwindToQuestions" unwindAction="unwindToQuestions:" id="qGf-pr-Edb"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bfy-4a-qB8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="4HP-H7-Flq" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="2192.8000000000002" y="100.29985007496252"/>
         </scene>
-        <!--Sessions-->
+        <!--Navigation Controller-->
         <scene sceneID="eNI-gO-ATa">
             <objects>
-                <navigationController id="xPQ-WW-jeP" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Sessions" id="qyK-kV-AoI"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" largeTitles="YES" id="lIS-gz-akT">
+                <navigationController id="xPQ-WW-jeP" customClass="NavigationController" customModule="Questions" customModuleProvider="target" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="lIS-gz-akT">
                         <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
